# vesperando

./: .gitignore  .gitmodules  LICENSE  README.md  ToVBasicRandomizer.py  ToVPatcher.py  game_types.py  packer.py  patcher.py  pyproject.toml  requirements.txt  vesperando_cli.spec
.github/workflows/: build.yml
cli/: pyproject.toml
cli/src/vesperando_cli/: __init__.py  __main__.py  cli_logging.py  prompt.py
conf/: settings.py
config/: settings.py
core/: pyproject.toml  setup.py
core/src/vesperando_core/: configs.py  game_types.py  options.py  packer.py  patcher.py  procedure.py  randomizer.py  spoil.py
core/src/vesperando_core/conf/: settings.py
core/src/vesperando_core/lib/: complib.py
core/src/vesperando_core/res/: enums.py  schema.py  sort.py
core/src/vesperando_core/res/models/: annotations.py  options.py  settings.py
core/src/vesperando_core/static/: artes.json  checksums.json  chests.json  events.json  metadata.json  search.json  shop.json  skills.json
core/src/vesperando_core/static/templates/: artes_api.json  shop_items_api.json  skills_api.json
lib/: complib.py
scripts/: export.py  generate_ids.py  generate_tables.py  setup_build.py  setup_dev.py  sheet_convert.py  shop_data.py
src/vesperando_cli/: __main__.py  cli_logging.py  prompt.py
src/vesperando_core/: ToVPatcher.py  configs.py  game_types.py  packer.py  patcher.py  procedure.py  randomizer.py  spoil.py  utils.py
src/vesperando_core/conf/: settings.py
src/vesperando_core/lib/: complib.py
src/vesperando_core/res/: enums.py
src/vesperando_core/static/: artes_id_table.json  chests.json  items_id_table.json  named_npc_maps.json  named_search_points.json  search_points.json  shop.json  shop_items.json  skills.json  skills_by_char.json  skills_id_table.json
src/vesperando_core/static/templates/: items_api.json
tests/: chest.test.py  debug.py  items.test.py  search_points.test.py  skills.test.py
tests/integration/: test_generate.py  test_patch.py  test_restore.py
tests/unit/: GameMeta.py  debug.py  test_artes.py  test_chest.py  test_events.py  test_extract.py  test_shop.py  test_tss.py
