[project]
name = "vesperando_cli"
version = "0.3.0.dev1"
authors = [{ name="aidanii", email="aidanii_real@proton.me" }]
description = "CLI Application for generating randomization patches and application of patches to Tales of Vesperia: Definitive Edition."
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "click==8.3.1",
    "rich~=14.3.3",
    "vesperando_core~=0.2.0",
]

[project.optional-dependencies]
test = [
    "python-dotenv~=1.2.2"
]
build = [
    "pyinstaller==6.19.0",
]

[project.urls]
Homepage = "https://github.com/aidanii24/vesperando"

[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["/tests*"]

[tool.setuptools.package-data]
"*" = ["LICENSE"]
