[project]
name = "vesperando_core"
version = "0.2.1"
authors = [{ name="aidanii", email="aidanii_real@proton.me" }]
description = "Core library for generating randomization patches and application of patches to Tales of Vesperia: Definitive Edition."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "altgraph==0.17.5",
    "lxml==6.0.2",
    "odfdo==3.17.6",
    "packaging==25.0",
    "pip-autoremove==0.10.0",
    "psutil==7.1.3",
    "pydantic==2.12.5",
    "setuptools==80.9.0",
    "libvespy~=0.1.2",
    "vesperando_core~=0.2.0",
    "PyYAML~=6.0.3",
]

[project.optional-dependencies]
test = [
    "python-dotenv~=1.2.2"
]

[project.urls]
Homepage = "https://github.com/aidanii24/vesperando"

[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["/tests*"]

[tool.setuptools.package-data]
"*" = ["*.json", "_*.so", "_*.dll"]
